just added documentation

--- a/notebooks/1.02_smg_data_processing.ipynb
+++ b/notebooks/1.02_smg_data_processing.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "___\n",
     "\n",
-    "# <font color= #f6c049> **Soda Pop Proyect: Data Processing** </font>\n",
+    "# <font color= #f6c049> **Soda Pop Project: Data Processing** </font>\n",
     "#### <font color= #2E9AFE> `Deep Learning`</font>\n",
     "<Strong> Sofía Maldonado, Óscar Josué Rocha & Viviana Toledo </Strong>\n",
     "\n",
@@ -240,7 +240,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "soda-gen-proy (3.11.14)",
+   "display_name": "soda-gen-proy",
    "language": "python",
    "name": "python3"
   },
