--- a/notebooks/1.01_smg_data_source.ipynb
+++ b/notebooks/1.01_smg_data_source.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "___\n",
     "\n",
-    "# <font color= #f6c049> **Soda Pop Proyect: Data Source** </font>\n",
+    "# <font color= #f6c049> **Soda Pop Project: Data Source** </font>\n",
     "#### <font color= #2E9AFE> `Deep Learning`</font>\n",
     "<Strong> Sofía Maldonado, Óscar Josué Rocha & Viviana Toledo </Strong>\n",
     "\n",
@@ -37,7 +37,24 @@
    "id": "b4baeadc",
    "metadata": {},
    "source": [
-    "**[Aquí expliquen el código de Python para obtener las URLs (y ponganlo en el repo, somewhere) plz and thank you] Mencionen tmb algo de que es útil tener las imágenes en URLs en vez de solo descargarlas directo desde el navegador porque así cualquiera de nosotres puede descargar las mismas imágenes en cualquier momento, porque los resultados de Google Images siempre cambian ok bye**"
+    "1. Perform a search on _Google Images_. Using the console available on the web browser, download the displayed images URLs with the following code, which will store the URLs on a CSV file:\n",
+    "\n",
+    "``` javascript\n",
+    "const urls = Array.from(document.querySelectorAll('img'))\n",
+    "  .map(img => img.src)\n",
+    "  .filter(src => src.startsWith('http'));\n",
+    "\n",
+    "const csvContent = 'url\\n' + urls.join('\\n');\n",
+    "\n",
+    "const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });\n",
+    "const link = document.createElement('a');\n",
+    "link.href = URL.createObjectURL(blob);\n",
+    "link.download = 'urls.csv';\n",
+    "document.body.appendChild(link);\n",
+    "link.click();\n",
+    "document.body.removeChild(link);\n",
+    "URL.revokeObjectURL(link.href);\n",
+    "```"
    ]
   },
   {
@@ -45,7 +62,7 @@
    "id": "c8784e4d",
    "metadata": {},
    "source": [
-    "With the URLs for the images in the CSV files, the next step was to download them. This was done with a very simple Go script. This was written in Go because as the task involved downloading thousands of images, and Go is a faster language than Python, so the process would be faster. There are also more robust web scraping tools in Go that work better on stingy websites like Google, in comparison to Python.\n",
+    "2. With the URLs for the images in the CSV files, the next step was to download them. This was done with a very simple Go script. This was written in Go because as the task involved downloading thousands of images, and Go is a faster language than Python, so the process would be faster. There are also more robust web scraping tools in Go that work better on stingy websites like Google, in comparison to Python.\n",
     "\n",
     "The script opens each of the CSV files. For each one, it reads the image URL and downloads the image in question with the name of whichever soda it is (it gets this information from the name of the CSV file). The original CSV files can be found in `/data/raw`. The Go script used can be found in `/references/main.go`\n",
     "\n",
