normalized imgs for data/processed :)

--- a/notebooks/1.02_smg_data_processing.ipynb
+++ b/notebooks/1.02_smg_data_processing.ipynb
@@ -26,19 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8c1b4d3e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2026-02-26 15:58:08.377700: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Imports\n",
     "# General Imports\n",
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "4fe2e3dd",
    "metadata": {},
    "outputs": [
@@ -76,12 +67,12 @@
    "id": "8606927c",
    "metadata": {},
    "source": [
-    "The image normalization will make all images **(256,256)** in size."
+    "Firstly, all images will be resized to (256, 256)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "86964adb",
    "metadata": {},
    "outputs": [
@@ -89,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 1627 files.\n"
+      "Found 1624 files.\n"
      ]
     },
     {
@@ -97,7 +88,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1772143090.516420    4421 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 3534 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 2060, pci bus id: 0000:09:00.0, compute capability: 7.5\n"
+      "I0000 00:00:1772151610.406763   13959 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4143 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 4050 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.9\n"
      ]
     },
     {
@@ -106,17 +97,20 @@
        "<_PrefetchDataset element_spec=TensorSpec(shape=(None, 256, 256, 3), dtype=tf.float32, name=None)>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Resize images to 256 x 256 pixels\n",
     "img_size = 256\n",
     "\n",
+    "# Create dataset from directory\n",
     "df = image_dataset_from_directory(\n",
-    "    directory=\"../data/external/\", \n",
-    "    image_size=(img_size, img_size),\n",
+    "    directory=\"../data/external/\",          # Source \n",
+    "    image_size=(img_size, img_size),        # Size\n",
+    "    color_mode='rgb', \n",
     "    labels=None,\n",
     "    label_mode=None)\n",
     "\n",
@@ -128,7 +122,7 @@
    "id": "13f40e40",
    "metadata": {},
    "source": [
-    "Testing how images turn out"
+    "Testing how images turn out:"
    ]
   },
   {
@@ -177,8 +171,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c0b77c02",
+   "metadata": {},
+   "source": [
+    "Before saving the processed images, a pixel normalization will be applied to each image:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "id": "0786e8e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.map(lambda x: tf.cast(x, tf.float32) / 255.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbf939b2",
+   "metadata": {},
+   "source": [
+    "Afterwards, a train-test-val split will be performed:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "e3859e19",
    "metadata": {},
    "outputs": [],
@@ -188,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ed7f8136",
    "metadata": {},
    "outputs": [],
@@ -201,6 +221,31 @@
     "train_ds = df.take(train_batches)\n",
     "val_ds = df.skip(train_batches).take(val_batches)\n",
     "test_ds = df.skip(train_batches+val_batches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "327ee618",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape: (32, 256, 256, 3)\n",
+      "Dtype: <dtype: 'float32'>\n",
+      "Min: 0.0\n",
+      "Max: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for batch in df.take(1):\n",
+    "    print(\"Shape:\", batch.shape)\n",
+    "    print(\"Dtype:\", batch.dtype)\n",
+    "    print(\"Min:\", tf.reduce_min(batch).numpy())\n",
+    "    print(\"Max:\", tf.reduce_max(batch).numpy())"
    ]
   },
   {
