--- a/notebooks/3.01_vtf_perceptual_ae.ipynb
+++ b/notebooks/3.01_vtf_perceptual_ae.ipynb
@@ -18,10 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "6f015069",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-02-26 19:06:04.759426: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "# General\n",
     "import numpy as np\n",
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "678f665c",
    "metadata": {},
    "outputs": [
@@ -144,10 +153,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "72cb8ef8",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1772154370.790828    8036 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 695 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 2060, pci bus id: 0000:09:00.0, compute capability: 7.5\n"
+     ]
+    },
     {
      "ename": "NotFoundError",
      "evalue": "tf.data snapshot element_spec file not found: ../data/processed/test_ds/dataset_spec.pb.",
@@ -155,10 +172,10 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mNotFoundError\u001b[39m                             Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m train_ds = tf.data.Dataset.load(\u001b[33m'\u001b[39m\u001b[33m../data/processed/train_ds\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      2\u001b[39m val_ds = tf.data.Dataset.load(\u001b[33m'\u001b[39m\u001b[33m../data/processed/val_ds\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m test_ds = \u001b[43mtf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m.\u001b[49m\u001b[43mDataset\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m../data/processed/test_ds\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/apps/deep-learning/soda_pop_proy/.venv/lib/python3.11/site-packages/tensorflow/python/data/ops/dataset_ops.py:1846\u001b[39m, in \u001b[36mDatasetV2.load\u001b[39m\u001b[34m(path, element_spec, compression, reader_func, wait)\u001b[39m\n\u001b[32m   1842\u001b[39m \u001b[38;5;66;03m# Loaded lazily due to a circular dependency (dataset_ops -> load_op ->\u001b[39;00m\n\u001b[32m   1843\u001b[39m \u001b[38;5;66;03m# dataset_ops).\u001b[39;00m\n\u001b[32m   1844\u001b[39m \u001b[38;5;66;03m# pylint: disable=g-import-not-at-top,protected-access\u001b[39;00m\n\u001b[32m   1845\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtensorflow\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpython\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdata\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mops\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_op\n\u001b[32m-> \u001b[39m\u001b[32m1846\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mload_op\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_load\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1847\u001b[39m \u001b[43m    \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m=\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1848\u001b[39m \u001b[43m    \u001b[49m\u001b[43melement_spec\u001b[49m\u001b[43m=\u001b[49m\u001b[43melement_spec\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1849\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcompression\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcompression\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1850\u001b[39m \u001b[43m    \u001b[49m\u001b[43mreader_func\u001b[49m\u001b[43m=\u001b[49m\u001b[43mreader_func\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1851\u001b[39m \u001b[43m    \u001b[49m\u001b[43mwait\u001b[49m\u001b[43m=\u001b[49m\u001b[43mwait\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/apps/deep-learning/soda_pop_proy/.venv/lib/python3.11/site-packages/tensorflow/python/data/ops/load_op.py:68\u001b[39m, in \u001b[36m_load\u001b[39m\u001b[34m(path, element_spec, compression, reader_func, wait)\u001b[39m\n\u001b[32m     64\u001b[39m   \u001b[38;5;28;01mreturn\u001b[39;00m _load_distributed_snapshot(\n\u001b[32m     65\u001b[39m       path, distributed_snapshot_metadata, reader_func)\n\u001b[32m     67\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m element_spec \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m68\u001b[39m   element_spec = \u001b[43m_load_element_spec\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     69\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m _LoadDataset(path, element_spec, compression, reader_func)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/apps/deep-learning/soda_pop_proy/.venv/lib/python3.11/site-packages/tensorflow/python/data/ops/load_op.py:155\u001b[39m, in \u001b[36m_load_element_spec\u001b[39m\u001b[34m(path)\u001b[39m\n\u001b[32m    153\u001b[39m dataset_spec_filename = os.path.join(path, dataset_ops.DATASET_SPEC_FILENAME)\n\u001b[32m    154\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m gfile.Exists(dataset_spec_filename):\n\u001b[32m--> \u001b[39m\u001b[32m155\u001b[39m   \u001b[38;5;28;01mraise\u001b[39;00m errors.NotFoundError(\n\u001b[32m    156\u001b[39m       node_def=\u001b[38;5;28;01mNone\u001b[39;00m, op=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m    157\u001b[39m       message=\u001b[33m\"\u001b[39m\u001b[33mtf.data snapshot element_spec file not found: \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    158\u001b[39m               \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdataset_spec_filename\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    160\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m gfile.GFile(dataset_spec_filename, \u001b[33m\"\u001b[39m\u001b[33mrb\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m    161\u001b[39m   encoded_spec = f.read()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m train_ds = tf.data.Dataset.load(\u001b[33m'\u001b[39m\u001b[33m../data/processed/train_ds\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      2\u001b[39m val_ds = tf.data.Dataset.load(\u001b[33m'\u001b[39m\u001b[33m../data/processed/val_ds\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m test_ds = \u001b[43mtf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m.\u001b[49m\u001b[43mDataset\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m../data/processed/test_ds\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/vscode/soda_pop_proy/.venv/lib/python3.11/site-packages/tensorflow/python/data/ops/dataset_ops.py:1846\u001b[39m, in \u001b[36mDatasetV2.load\u001b[39m\u001b[34m(path, element_spec, compression, reader_func, wait)\u001b[39m\n\u001b[32m   1842\u001b[39m \u001b[38;5;66;03m# Loaded lazily due to a circular dependency (dataset_ops -> load_op ->\u001b[39;00m\n\u001b[32m   1843\u001b[39m \u001b[38;5;66;03m# dataset_ops).\u001b[39;00m\n\u001b[32m   1844\u001b[39m \u001b[38;5;66;03m# pylint: disable=g-import-not-at-top,protected-access\u001b[39;00m\n\u001b[32m   1845\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtensorflow\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpython\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdata\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mops\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_op\n\u001b[32m-> \u001b[39m\u001b[32m1846\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mload_op\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_load\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1847\u001b[39m \u001b[43m    \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m=\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1848\u001b[39m \u001b[43m    \u001b[49m\u001b[43melement_spec\u001b[49m\u001b[43m=\u001b[49m\u001b[43melement_spec\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1849\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcompression\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcompression\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1850\u001b[39m \u001b[43m    \u001b[49m\u001b[43mreader_func\u001b[49m\u001b[43m=\u001b[49m\u001b[43mreader_func\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1851\u001b[39m \u001b[43m    \u001b[49m\u001b[43mwait\u001b[49m\u001b[43m=\u001b[49m\u001b[43mwait\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/vscode/soda_pop_proy/.venv/lib/python3.11/site-packages/tensorflow/python/data/ops/load_op.py:68\u001b[39m, in \u001b[36m_load\u001b[39m\u001b[34m(path, element_spec, compression, reader_func, wait)\u001b[39m\n\u001b[32m     64\u001b[39m   \u001b[38;5;28;01mreturn\u001b[39;00m _load_distributed_snapshot(\n\u001b[32m     65\u001b[39m       path, distributed_snapshot_metadata, reader_func)\n\u001b[32m     67\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m element_spec \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m68\u001b[39m   element_spec = \u001b[43m_load_element_spec\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     69\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m _LoadDataset(path, element_spec, compression, reader_func)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/vscode/soda_pop_proy/.venv/lib/python3.11/site-packages/tensorflow/python/data/ops/load_op.py:155\u001b[39m, in \u001b[36m_load_element_spec\u001b[39m\u001b[34m(path)\u001b[39m\n\u001b[32m    153\u001b[39m dataset_spec_filename = os.path.join(path, dataset_ops.DATASET_SPEC_FILENAME)\n\u001b[32m    154\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m gfile.Exists(dataset_spec_filename):\n\u001b[32m--> \u001b[39m\u001b[32m155\u001b[39m   \u001b[38;5;28;01mraise\u001b[39;00m errors.NotFoundError(\n\u001b[32m    156\u001b[39m       node_def=\u001b[38;5;28;01mNone\u001b[39;00m, op=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m    157\u001b[39m       message=\u001b[33m\"\u001b[39m\u001b[33mtf.data snapshot element_spec file not found: \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    158\u001b[39m               \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdataset_spec_filename\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    160\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m gfile.GFile(dataset_spec_filename, \u001b[33m\"\u001b[39m\u001b[33mrb\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m    161\u001b[39m   encoded_spec = f.read()\n",
       "\u001b[31mNotFoundError\u001b[39m: tf.data snapshot element_spec file not found: ../data/processed/test_ds/dataset_spec.pb."
      ]
     }
@@ -180,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "soda-gen-proy",
+   "display_name": "soda-gen-proy (3.11.14)",
    "language": "python",
    "name": "python3"
   },
