sucessfully ran the model, it's not returning great images

--- a/notebooks/1.02_smg_data_processing.ipynb
+++ b/notebooks/1.02_smg_data_processing.ipynb
@@ -310,7 +310,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "soda-gen-proy (3.11.14)",
+   "display_name": "soda-gen-proy",
    "language": "python",
    "name": "python3"
   },
